<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.partner.view.Home">

        <ImageView
            android:id="@+id/imagemfundo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="1dp"
            android:contentDescription="@string/todo2"
            android:importantForAccessibility="yes"
            android:src="@drawable/imagemfundo"
            android:visibility="visible"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/comecar"
            android:layout_width="326dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#19BAD0"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/come_ar"
            app:layout_constraintBottom_toTopOf="@+id/imagemfundo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icone"
            android:importantForAccessibility="yes"
            android:rotationX="-2"
            android:src="@drawable/icone"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/partner"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/a_partner_chegou_para_expandir_os_limites_da_educa_o"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F8F5F5"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/sobre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="488dp"
            android:layout_marginEnd="16dp"
            android:text="@string/texthome"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/cinza"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
