<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.partner.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="4dp"
        android:layout_height="686dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="43dp">

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="363dp"
        android:layout_marginBottom="699dp"
        android:contentDescription="@string/icone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/icone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="624dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@color/blu"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="387dp"
        android:drawableEnd="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPwd"
        style="@style/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="304dp"
        android:autofillHints="no"
        android:drawableEnd="@drawable/view"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="242dp"
        android:backgroundTint="@color/blu"
        android:hint="entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gotocadastro"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/blu"
        android:hint="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtPwd"
        app:layout_constraintStart_toStartOf="@+id/edtPwd"
        app:layout_constraintTop_toTopOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>