<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.partner.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:layout_marginStart="227dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="453dp"
        android:text="@string/addPerson"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/purple_200"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="531dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/phone"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="602dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>